terraform-task-lab2/internetgetway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "osama-gw"
  }
}
